[package]
name = "gradient"
version = "0.1.0"
authors = ["william <zrf802@alumni.ku.dk>"]
edition = "2018"

[profile.release]
lto = true

[lib]
name = "gradient"
crate-type = ["cdylib"]

[dependencies]
ndarray-parallel = "0.9.0"
ndarray = "0.12.1"
indicatif = "0.11.0"

[dependencies.pyo3]
version = ">=0.7.0"
features = ["extension-module"]
