[package]
name = "gradient"
version = "0.1.0"
authors = ["william <zrf802@alumni.ku.dk>"]
edition = "2018"

[profile.release]
lto = true

[lib]
name = "gradient"
crate-type = ["cdylib"]

[dependencies]
indicatif = "0.14.0"
itertools = "0.8.2"

[dependencies.ndarray]
version = "0.13.0"
features = ["rayon"]

[dependencies.pyo3]
version = ">=0.9.0-alpha.1"
features = ["extension-module"]
